[package]
name = "saddle-camera-split-screen"
version = "0.1.0"
edition = "2024"
publish = false
repository = "https://github.com/julien-blanchon/saddle-camera-split-screen"
license = "MIT-0"
description = "Dynamic split-screen orchestration for 2-4 local players in Bevy"

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }

[workspace]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
