[workspace]
members = ["common", "basic", "dynamic_two_player", "four_player", "per_player_ui", "lab"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-camera-split-screen = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
