[workspace]
members = ["common", "basic", "dynamic_two_player", "weighted_dynamic", "third_person_coop", "four_player", "per_player_ui", "dynamic_join", "lab"]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
bevy_flair = "0.7"
bevy_input_focus = "0.18"
bevy_ui_widgets = "0.18"
saddle-camera-split-screen = { path = ".." }
saddle-camera-third-person-camera = { git = "https://github.com/julien-blanchon/saddle-camera-third-person-camera" }
split_screen = { package = "saddle-camera-split-screen", path = ".." }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
collapsible_if = "allow"
