[package]
name = "split_screen_lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
brp = ["dep:bevy_brp_extras", "bevy/bevy_remote"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["serialize"] }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
split_screen = { workspace = true }
split_screen_example_common = { path = "../common" }

[lints]
workspace = true
