[package]
name = "saddle-camera-split-screen-example-third-person-coop"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-camera-third-person-camera = { workspace = true }
saddle-pane = { workspace = true }
split_screen = { workspace = true }
split_screen_example_common = { path = "../common" }

[lints]
workspace = true
